# Filenymous

./: .env.compose.example  .gitattributes  .gitignore  CONTRIBUTING.md  Caddyfile  Cargo.toml  DEPLOY_HOLO.md  LICENSE  Makefile  README.md  conductor-config.dev.yaml  conductor-config.holo.yaml  conductor-config.prod.yaml  docker-compose.yml  filenymous-app.html  flake.nix  happ.yaml  index.html  manifest.webmanifest  web-happ.yaml
.github/workflows/: build.yml  docker.yml  holo-deploy.yml  pages.yml  release.yml
app/: index.html
bridge/: .env.example  Dockerfile  fly.toml  package.json  tsconfig.json
bridge/src/: index.ts  notify.ts
bridge_v1_DEPRECATED/src/: notify.ts
code/: README.md  filenymous_ui.html
code/dnas/filenymous/zomes/coordinator/storage/src/: lib.rs
code/dnas/filenymous/zomes/coordinator/transfer/: Cargo.toml
code/dnas/filenymous/zomes/coordinator/transfer/src/: lib.rs
code/dnas/filenymous/zomes/integrity/identity_integrity/src/: lib.rs
code/dnas/filenymous/zomes/integrity/transfer_integrity/: Cargo.toml
code/dnas/filenymous/zomes/integrity/transfer_integrity/src/: lib.rs
code/filenymous_src/: CONTRIBUTING.md  conductor-config.prod.yaml  docker-compose.yml  happ.yaml
code/filenymous_src/bridge/: Dockerfile
code/filenymous_src/bridge/src/: auth.ts  otp.ts
code/filenymous_src/dnas/filenymous/: dna.yaml
code/filenymous_src/dnas/filenymous/zomes/integrity/storage_integrity/: Cargo.toml
code/filenymous_src/network/signal/: Dockerfile
code/filenymous_src/tests/: package.json
code/filenymous_src/tests/src/: filenymous.test.ts
code/filenymous_src/ui/: vite.config.ts
code/filenymous_src/ui/src/components/: Header.tsx  HistoryPanel.tsx  IdentityPanel.tsx  ReceivePanel.tsx  SendPanel.tsx
code/filenymous_src/ui/src/crypto/: aes.ts  chunker.ts  contact.ts  keystore.ts
code/filenymous_src/ui/src/holochain/: storage.ts  transfer.ts
demo/: index.html
deploy/: DEPLOY.md  docker-compose.yml  setup.sh
dnas/filenymous/: dna.yaml
dnas/filenymous/zomes/coordinator/identity/: Cargo.toml
dnas/filenymous/zomes/coordinator/identity/src/: lib.rs
dnas/filenymous/zomes/coordinator/parcel/: Cargo.toml
dnas/filenymous/zomes/coordinator/parcel/src/: lib.rs
dnas/filenymous/zomes/coordinator/room/: Cargo.toml
dnas/filenymous/zomes/coordinator/room/src/: lib.rs
dnas/filenymous/zomes/coordinator/storage/: Cargo.toml
dnas/filenymous/zomes/coordinator/storage/src/: lib.rs
dnas/filenymous/zomes/coordinator/transfer/: Cargo.toml
dnas/filenymous/zomes/coordinator/transfer/src/: lib.rs
dnas/filenymous/zomes/integrity/identity_integrity/: Cargo.toml
dnas/filenymous/zomes/integrity/identity_integrity/src/: lib.rs
dnas/filenymous/zomes/integrity/parcel_integrity/: Cargo.toml
dnas/filenymous/zomes/integrity/parcel_integrity/src/: lib.rs
dnas/filenymous/zomes/integrity/room_integrity/: Cargo.toml
dnas/filenymous/zomes/integrity/room_integrity/src/: lib.rs
dnas/filenymous/zomes/integrity/storage_integrity/: Cargo.toml
dnas/filenymous/zomes/integrity/storage_integrity/src/: lib.rs
dnas/filenymous/zomes/integrity/transfer_integrity/: Cargo.toml
docs/: DEPLOYMENT.md
docs/demo/: .htaccess  index.html  sw.js
docs/demo/app/: index.html
docs/superpowers/plans/: 2026-06-21-hwc-wallet-implementation.md  2026-06-23-holochain-sharedrop-defense.md  2026-06-25-public-ux-iroh-redesign.md  2026-06-29-magic-ux-implementation.md  2026-07-03-public-room-ux.md  2026-07-03-real-room-p2p.md
docs/superpowers/specs/: 2026-06-21-hwc-wallet-design.md  2026-06-23-holochain-sharedrop-defense-design.md  2026-06-25-public-ux-iroh-redesign-design.md  2026-06-29-magic-reliability-rooms-design.md  2026-07-07-rooms-discord-navigation-design.md
filenymous/: conductor-config.dev.yaml
filenymous/bridge/src/: index.ts
filenymous/dnas/filenymous/zomes/coordinator/identity/: Cargo.toml
filenymous/dnas/filenymous/zomes/coordinator/storage/: Cargo.toml
mailer/: .env.example  Cargo.toml  Dockerfile  README.md  Secrets.toml.example
mailer/src/: main.rs
network/: README.md
network/bootstrap/: Dockerfile
network/kitsune2/: Dockerfile
p2p-signal/: README.md  filenymous-signal.service  nginx-opendpe-location.conf  package-lock.json  package.json  server.js
scripts/: download-binaries.ps1  download-binaries.sh
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  errors.rs  launch.rs  main.rs
src-tauri/src/app/: mod.rs  system_tray.rs  window.rs
src-tauri/src/app_state/: filesystem.rs  mod.rs
src-tauri/src/commands/: mod.rs  sign_zome_call.rs
src-tauri/src/process/: conductor.rs  lair.rs
tests/: package-lock.json  package.json  vitest.config.ts
tests/src/: filenymous.test.ts  magic_ux.test.ts  p2p_direct.test.ts  p2p_signal_hardening.test.ts  p2p_signal_relay.test.ts  p2p_signal_server.test.ts  room_zome.test.ts  static_room_demo.test.ts  web_mode_standalone.test.ts
ui/: .env.example  index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.tsx  main.tsx
ui/src/components/: ContactsPanel.tsx  Footer.tsx  Header.tsx  HistoryPanel.tsx  IdentityPanel.tsx  PendingNotices.tsx  PrivacyPanel.tsx  ReceivePanel.tsx  RoomPanel.test.tsx  RoomPanel.tsx  SendPanel.tsx  WalletPanel.tsx
ui/src/crypto/: aes.ts  buffer.ts  chunker.ts  ecies.ts  keystore.ts
ui/src/holochain/: client.ts  delivery.ts  fileStorage.ts  identity.ts  room.test.ts  room.ts  runtime.test.ts  runtime.ts  types.ts
ui/src/rooms/: directTransfer.test.ts  directTransfer.ts  historyVault.test.ts  historyVault.ts  roomModel.test.ts  roomModel.ts  types.ts
ui/src/store/: useStore.ts
ui/src/wallet/: addresses.test.ts  addresses.ts  networks.test.ts  networks.ts  sendModel.test.ts  sendModel.ts  types.ts  vault.test.ts  vault.ts
