[package]
name        = "filenymous"
version     = "0.2.2"
edition     = "2021"
description = "Filenymous – P2P encrypted file transfer powered by Holochain"
authors     = ["Filenymous Contributors"]

[profile.release]
opt-level = "z"
lto       = true

# ── Build ─────────────────────────────────────────────────────────────────────
[build-dependencies]
serde          = { version = "1.0", features = ["derive"] }
tauri-build    = { version = "1.5", features = [] }
toml           = "0.8"

# ── Runtime deps (mirror holochain-kangaroo exactly) ─────────────────────────
[dependencies]

# ── Holochain — version must match the sidecar binary in bins/ ──────────────
# build.rs reads this version to set HOLOCHAIN_VERSION at compile time
holochain_client     = "0.8.1"
holochain            = { version = "0.6.1", features = ["sqlite-encrypted"] }
holochain_keystore   = "0.6.1"
holochain_types      = "0.6.1"
holochain_zome_types = "0.6.1"
mr_bundle            = "0.6.1"

# ── Tauri ──────────────────────────────────────────────────────────────────────
tauri = { version = "1.5", features = [
  "devtools",
  "cli",
  "clipboard-write-text",
  "dialog",
  "process-command-api",
  "system-tray",
  "shell-open",
] }

# ── Optional: single-instance (tray) ─────────────────────────────────────────
tauri-plugin-single-instance = { git = "https://github.com/matthme/plugins-workspace", branch = "single-instance-semver" }

# ── Async ─────────────────────────────────────────────────────────────────────
futures    = "0.3"

# ── Utilities ─────────────────────────────────────────────────────────────────
log        = "0.4"
log4rs     = "1.0"
nanoid     = "0.4"
opener     = "0.5"
portpicker = "0.1"
semver     = "1.0"
serde      = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
sodoken    = "0.0.9"
symlink    = "0.1"
thiserror  = "1"
url        = "2"
url2       = "0.0.6"
chrono     = "0.4"

# ── Feature flags ─────────────────────────────────────────────────────────────
[features]
# Required by Tauri for production builds (when distDir points to filesystem)
custom-protocol = ["tauri/custom-protocol"]
