[package]
name = "identity"
version = "0.1.0"
edition = "2021"

[lib]
name = "identity"
crate-type = ["cdylib", "rlib"]

[dependencies]
hdk = { workspace = true }
serde = { workspace = true }
identity_integrity = { path = "../../integrity/identity_integrity" }
# M3: base64 encoding for X25519 key transport
base64 = { workspace = true }
