[package]
name    = "parcel"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]
name       = "parcel"

[dependencies]
hdk        = { workspace = true }
serde      = { workspace = true }
serde_json = { workspace = true }
parcel_integrity = { path = "../../integrity/parcel_integrity" }
